--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
-<script>
-  window.location.href = 'https://youtube.com/';
-</script>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+
+  <!-- Twitter Card：画像＋タイトルのみ -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="表示したいタイトル">
+  <meta name="twitter:image" content="https://example.com/card.jpg">
+
+  <!-- 自動リダイレクト（短縮URL用途） -->
+  <script>
+    window.location.replace("https://www.google.co.jp/");
+  </script>
+</head>
+<body></body>
+</html>
