--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 
   <!-- Twitter Card：画像＋タイトルのみ -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="表示したいタイトル">
-  <meta name="twitter:image" content="https://example.com/card.jpg">
+  <meta name="twitter:title" content="こんにちわ">
+  <meta name="twitter:image" content="https://sisimomo00.github.io/tinko/images/card.jpg">
 
   <!-- 自動リダイレクト（短縮URL用途） -->
   <script>
-    window.location.replace("https://www.google.co.jp/");
+    window.location.replace("https://1link.jp/info2");
   </script>
 </head>
 <body></body>
