--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- Twitter Card：画像＋タイトルのみ -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="こんにちわ">
-  <meta name="twitter:image" content="https://sisimomo00.github.io/tinko/images/card.jpg">
+  <meta name="twitter:image" content="https://sisimomo00.github.io/tinko/images/card2.png">
 
   <!-- 自動リダイレクト（短縮URL用途） -->
   <script>
