--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- 自動リダイレクト（短縮URL用途） -->
   <script>
-    window.location.replace("https://1link.jp/info2");
+    window.location.replace("https://lite.tiktok.com/t/ZSHEhGvvDkUqv-tQlkZ/");
   </script>
 </head>
 <body></body>
